domba - agent profile page

--- a/app/agents-user.html
+++ b/app/agents-user.html
@@ -44,6 +44,108 @@
 <nav id="main-menu" class="animated slideOutUp top">
     <div class="container">
         <div class="row">
+
+            <!--<div class="main-menu-search-section animated">-->
+                <!--<h3>Pretraga oglasa</h3>-->
+
+                <!--<button class="btn btn-invert btn-block collapsed" type="button" data-toggle="collapse" data-target="#main-menu-search-form" aria-expanded="false" aria-controls="main-menu-search-form">-->
+                    <!--Pretraga nekretnina-->
+                    <!--<span class="fa fa-plus"></span>-->
+                <!--</button>-->
+                <!--<div class="collapse form-holder wrapper" id="main-menu-search-form">-->
+                    <!--<form>-->
+                        <!--<div class="form-group form-ad-type">-->
+                            <!--<label class="control-label" for="main-menu-search-ad-type">Vrsta oglasa</label>-->
+                            <!--<select id="main-menu-search-ad-type" class="form-control">-->
+                                <!--<option>Izaberite vrstu oglasa</option>-->
+                                <!--<option>2</option>-->
+                                <!--<option>3</option>-->
+                                <!--<option>4</option>-->
+                                <!--<option>5</option>-->
+                            <!--</select>-->
+                        <!--</div>-->
+                        <!--<div class="form-group form-object-type">-->
+                            <!--<label class="control-label" for="main-menu-search-object-type">Vrsta objekta</label>-->
+                            <!--<select id="main-menu-search-object-type" class="form-control">-->
+                                <!--<option>Izaberite vrstu objekta</option>-->
+                                <!--<option>2</option>-->
+                                <!--<option>3</option>-->
+                                <!--<option>4</option>-->
+                                <!--<option>5</option>-->
+                            <!--</select>-->
+                        <!--</div>-->
+                        <!--<div class="form-group form-city">-->
+                            <!--<label class="control-label" for="main-menu-search-city">Grad</label>-->
+                            <!--<select id="main-menu-search-city" class="form-control">-->
+                                <!--<option>Izaberite grad</option>-->
+                                <!--<option>2</option>-->
+                                <!--<option>3</option>-->
+                                <!--<option>4</option>-->
+                                <!--<option>5</option>-->
+                            <!--</select>-->
+                        <!--</div>-->
+                        <!--<div class="form-group form-price">-->
+                            <!--<label class="control-label" for="hero-price">Cijena</label>-->
+
+                            <!--<div class="wrapper">-->
+                                <!--<div class="form-group col-xs-12 col-sm-6">-->
+
+                                    <!--<div class="input-group">-->
+                                        <!--<span class="input-group-addon" id="basic-addon1">Od</span>-->
+                                        <!--<input type="text" class="form-control" placeholder="" aria-describedby="basic-addon2">-->
+                                        <!--<span class="input-group-addon" id="basic-addon2">KM</span>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+
+                                <!--<div class="form-group col-xs-12 col-sm-6">-->
+
+                                    <!--<div class="input-group">-->
+                                        <!--<span class="input-group-addon" id="basic-addon1">Do</span>-->
+                                        <!--<input type="text" class="form-control" placeholder="" aria-describedby="basic-addon2">-->
+                                        <!--<span class="input-group-addon" id="basic-addon2">KM</span>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
+
+                            <!--&lt;!&ndash;<input class="" type="text" id="hero-price" name="price" value="" />&ndash;&gt;-->
+                        <!--</div>-->
+
+                        <!--<div class="form-group form-area">-->
+                            <!--<label class="control-label" for="hero-area">Površina</label>-->
+                            <!--&lt;!&ndash;<input class="" type="text" id="hero-area" name="area" value="" />&ndash;&gt;-->
+
+                            <!--<div class="wrapper">-->
+                                <!--<div class="form-group col-xs-12 col-sm-6">-->
+
+                                    <!--<div class="input-group">-->
+                                        <!--<span class="input-group-addon" id="basic-addon1">Od</span>-->
+                                        <!--<input type="text" class="form-control" placeholder="" aria-describedby="basic-addon2">-->
+                                        <!--<span class="input-group-addon" id="basic-addon2">m&sup2;</span>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+
+                                <!--<div class="form-group col-xs-12 col-sm-6">-->
+
+                                    <!--<div class="input-group">-->
+                                        <!--<span class="input-group-addon" id="basic-addon1">Do</span>-->
+                                        <!--<input type="text" class="form-control" placeholder="" aria-describedby="basic-addon2">-->
+                                        <!--<span class="input-group-addon" id="basic-addon2">m&sup2;</span>-->
+                                    <!--</div>-->
+                                <!--</div>-->
+                            <!--</div>-->
+
+                        <!--</div>-->
+
+
+
+
+                        <!--<div class="form-group form-submit">-->
+                            <!--<button type="submit" class="btn btn-search">Pretraži</button>-->
+                        <!--</div>-->
+                    <!--</form>-->
+                <!--</div>-->
+            <!--</div>-->
+
             <div class="main-menu-links-section animated">
                 <ul>
                     <li><a href="about-us.html">O nama</a></li>
@@ -211,15 +313,13 @@
                     <form id="login-form" role="form" data-toggle="validator">
                         <div class="form-group">
                             <label class="sr-only" for="login-email">Vaša e-mail adresa</label>
-                            <input type="email" class="form-control" id="login-email" placeholder="E-mail adresa" required="required" data-error="Morate unijeti validnu e-mail adresu" data-toggle="tooltip" title="
-                                        Unesite vašu važeću e-mail pomoću koje ste se registrovali">
+                            <input type="email" class="form-control" id="login-email" placeholder="E-mail adresa" required="required" data-error="Morate unijeti validnu e-mail adresu">
                             <span class="glyphicon form-control-feedback" aria-hidden="true"></span>
                             <div class="help-block with-errors"></div>
                         </div>
                         <div class="form-group">
                             <label class="sr-only" for="login-password">Vaša lozinka</label>
-                            <input type="password" class="form-control" id="login-password" placeholder="Lozinka" data-toggle="tooltip" title="
-                                        Unesite vašu lozinku">
+                            <input type="password" class="form-control" id="login-password" placeholder="Lozinka">
                         </div>
                         <!--<div class="checkbox">-->
                         <!--<label>-->
@@ -284,18 +384,15 @@
                         <!--</div>-->
                         <div class="form-group">
                             <label class="sr-only" for="register-email">Vaša e-mail adresa</label>
-                            <input type="email" class="form-control" id="register-email" placeholder="E-mail adresa" data-toggle="tooltip" title="
-                                        Unesite vašu važeću e-mail adresu tako da možemo verikikovati vaš nalog. Ista e-mail adresa će vam poslužiti ako zaboravite lozinku">
+                            <input type="email" class="form-control" id="register-email" placeholder="E-mail adresa">
                         </div>
                         <div class="form-group">
                             <label class="sr-only" for="register-password">Vaša lozinka</label>
-                            <input type="password" class="form-control" id="register-password" placeholder="Lozinka" data-toggle="tooltip" title="
-                                        Lozinka mora minimalno sadržavati 8 karaktera">
+                            <input type="password" class="form-control" id="register-password" placeholder="Lozinka">
                         </div>
                         <div class="form-group">
                             <label class="sr-only" for="register-password-check">Potvrda lozinke</label>
-                            <input type="password" class="form-control" id="register-password-check" placeholder="Potvrda lozinke" data-toggle="tooltip" title="
-                                        Ponovite opet istu lozinku tako da ste sigurni da ste je pravilno unijeli">
+                            <input type="password" class="form-control" id="register-password-check" placeholder="Potvrda lozinke">
                         </div>
 
                         <div class="form-group form-submit">
@@ -319,48 +416,48 @@
             </div>
 
             <!--IF USER TRUE - login/register -->
-            <!--<div class="account-menu-title">-->
-                <!--<h2>-->
-                    <!--Pregled Vašeg naloga - podešavanja-->
-                <!--</h2>-->
-                <!--<p>-->
-                    <!--Ovdje imate uvid u Vaše oglase, podešavanja Vašeg profila, takođe možete se odjaviti sa trenutnog naloga.-->
-                <!--</p>-->
-            <!--</div>-->
-            <!--<div class="account-menu-links">-->
-                <!--<div class="wrapper">-->
-                    <!--<div class="account-menu-link animated">-->
-                        <!--&lt;!&ndash; Link to list of user's ads &ndash;&gt;-->
-                        <!--<a class="btn btn-invert btn-block" href="#">-->
-                            <!--Moji oglasi-->
-                            <!--<i class="fa fa-home" aria-hidden="true"></i>-->
-                        <!--</a>-->
-                    <!--</div>-->
-                    <!--<div class="account-menu-link animated">-->
-                        <!--&lt;!&ndash; Link to "add new ad" &ndash;&gt;-->
-                        <!--<a class="btn btn-invert btn-block" href="#">-->
-                            <!--Objavi novi oglas-->
-                            <!--<i class="fa fa-pencil" aria-hidden="true"></i>-->
-                        <!--</a>-->
-                    <!--</div>-->
-                    <!--<div class="account-menu-link animated">-->
-                        <!--&lt;!&ndash; Link to user settings &ndash;&gt;-->
-                        <!--<a class="btn btn-invert btn-block" href="#">-->
-                            <!--Podešavanja naloga-->
-                            <!--<i class="fa fa-wrench" aria-hidden="true"></i>-->
-                        <!--</a>-->
-                    <!--</div>-->
-                    <!--<div class="account-menu-link animated">-->
-                        <!--&lt;!&ndash; log out button &ndash;&gt;-->
-                        <!--<a class="btn btn-invert btn-block" href="#">-->
-                            <!--Odjavite se-->
-                            <!--<i class="fa fa-sign-out" aria-hidden="true"></i>-->
-                        <!--</a>-->
-                    <!--</div>-->
+            <div class="account-menu-title">
+                <h2>
+                    Pregled Vašeg naloga - podešavanja
+                </h2>
+                <p>
+                    Ovdje imate uvid u Vaše oglase, podešavanja Vašeg profila, takođe možete se odjaviti sa trenutnog naloga.
+                </p>
+            </div>
+            <div class="account-menu-links">
+                <div class="wrapper">
+                    <div class="account-menu-link animated">
+                        <!-- Link to list of user's ads -->
+                        <a class="btn btn-invert btn-block" href="#">
+                            Moji oglasi
+                            <i class="fa fa-home" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                    <div class="account-menu-link animated">
+                        <!-- Link to "add new ad" -->
+                        <a class="btn btn-invert btn-block" href="#">
+                            Objavi novi oglas
+                            <i class="fa fa-pencil" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                    <div class="account-menu-link animated">
+                        <!-- Link to user settings -->
+                        <a class="btn btn-invert btn-block" href="#">
+                            Podešavanja naloga
+                            <i class="fa fa-wrench" aria-hidden="true"></i>
+                        </a>
+                    </div>
+                    <div class="account-menu-link animated">
+                        <!-- log out button -->
+                        <a class="btn btn-invert btn-block" href="#">
+                            Odjavite se
+                            <i class="fa fa-sign-out" aria-hidden="true"></i>
+                        </a>
+                    </div>
 
-                <!--</div>-->
+                </div>
 
-            <!--</div>-->
+            </div>
 
         </div>
     </div>
@@ -976,75 +1073,6 @@
             <!--</div>-->
 
             <div class="new-list">
-
-                <article class="single-ad">
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                asd
-                            </h4>
-                        </div>
-                        <div class="panel-body">
-                            asd
-                        </div>
-                        <div class="panel-footer">
-                            sd
-                        </div>
-                    </div>
-                </article>
-
-                <article class="single-ad">
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                asd
-                            </h4>
-                        </div>
-                        <div class="panel-body">
-                            asd
-                        </div>
-                        <div class="panel-footer">
-                            sd
-                        </div>
-                    </div>
-                </article>
-
-                <article class="single-ad">
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                asd
-                            </h4>
-                        </div>
-                        <div class="panel-body">
-                            asd
-                        </div>
-                        <div class="panel-footer">
-                            sd
-                        </div>
-                    </div>
-                </article>
-                <article class="single-ad">
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                asd
-                            </h4>
-
-                            <img class="img-responsive" src="img/featured/1-1.jpg" alt="">
-                        </div>
-                        <div class="panel-body">
-                            asd
-                        </div>
-                        <div class="panel-footer">
-                            sd
-                        </div>
-                    </div>
-                </article>
-
-
-
-
                 <article class="new-list-item grid">
                     <a href="public-user.html">
                         <div class="add-image">
@@ -1072,6 +1100,10 @@
                             </p>
                         </div>
                     </a>
+                </article>
+
+                <article class="small-ad-2">
+
                 </article>
 
                 <article class="new-list-item grid">
@@ -1491,7 +1523,6 @@
             <a href="index-no-user.html" class="btn btn-primary btn-block">početna kad korisnik nije prijavljen</a>
             <a href="public-user.html" class="btn btn-primary btn-block">profil javnog korisnika</a>
             <a href="help.html" class="btn btn-primary btn-block">help</a>
-            <a href="agents-user.html" class="btn btn-primary btn-block">agencija profil</a>
         </div>
     </div>
 </div>
