domba - new ad style

--- a/app/index.html
+++ b/app/index.html
@@ -977,47 +977,40 @@
 
             <div class="new-list">
 
-                <article class="single-ad">
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                asd
-                            </h4>
-                        </div>
-                        <div class="panel-body">
-                            asd
-                        </div>
-                        <div class="panel-footer">
-                            sd
-                        </div>
-                    </div>
-                </article>
 
                 <article class="single-ad">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <h4 class="panel-title">
-                                asd
-                            </h4>
-                        </div>
-                        <div class="panel-body">
-                            asd
-                        </div>
-                        <div class="panel-footer">
-                            sd
-                        </div>
-                    </div>
-                </article>
+                            <!--<h4 class="panel-title">-->
+                                <!--asd-->
+                            <!--</h4>-->
 
-                <article class="single-ad">
-                    <div class="panel panel-primary">
-                        <div class="panel-heading">
-                            <h4 class="panel-title">
-                                asd
-                            </h4>
+                            <img class="img-responsive" src="img/featured/2-1.jpg" alt="">
+                            <img class="img-responsive img-alternative" src="img/featured/2-2.jpg" alt="">
+
+                            <div class="social-status">
+                                <a href="#" data-toggle="tooltip" title="asd">
+                                    <i class="fa fa-eye" aria-hidden="true"></i>
+                                    <span class="badge">42</span>
+                                </a>
+                                <a href="#">
+                                    <i class="fa fa-heart" aria-hidden="true"></i>
+                                    <span class="badge">42</span>
+                                </a>
+                                <a href="#">
+                                    <i class="fa fa-share-alt" aria-hidden="true"></i>
+                                    <span class="badge">42</span>
+                                </a>
+                            </div>
+
                         </div>
                         <div class="panel-body">
-                            asd
+                            <a href="#" class="btn-more-info" data-toggle="tooltip" title="Pogledaj oglas">
+                                <i class="fa fa-plus" aria-hidden="true"></i>
+                            </a>
+
+                            <p>asdasd</p>
+
                         </div>
                         <div class="panel-footer">
                             sd
@@ -1027,14 +1020,77 @@
                 <article class="single-ad">
                     <div class="panel panel-primary">
                         <div class="panel-heading">
-                            <h4 class="panel-title">
-                                asd
-                            </h4>
+                            <!--<h4 class="panel-title">-->
+                                <!--asd-->
+                            <!--</h4>-->
 
                             <img class="img-responsive" src="img/featured/1-1.jpg" alt="">
+                            <img class="img-responsive img-alternative" src="img/featured/1-2.jpg" alt="">
+
+                            <div class="social-status">
+                                <a href="#" data-toggle="tooltip" title="Broj pregleda">
+                                    <i class="fa fa-eye" aria-hidden="true"></i>
+                                    <span class="badge">42</span>
+                                </a>
+                                <a href="#" data-toggle="tooltip" title="Broj sviđanja">
+                                    <i class="fa fa-heart" aria-hidden="true"></i>
+                                    <span class="badge">42</span>
+                                </a>
+                                <a href="#" data-toggle="tooltip" title="Broj Djeljenja">
+                                    <i class="fa fa-share-alt" aria-hidden="true"></i>
+                                    <span class="badge">42</span>
+                                </a>
+                            </div>
+
                         </div>
                         <div class="panel-body">
-                            asd
+                            <a href="#" class="btn-more-info" data-toggle="tooltip" title="Pogledaj oglas">
+                                <i class="fa fa-plus" aria-hidden="true"></i>
+                            </a>
+
+                            <p>asdasd</p>
+
+                        </div>
+                        <div class="panel-footer">
+                            sd
+                        </div>
+                    </div>
+                </article>
+
+
+                <article class="single-ad">
+                    <div class="panel panel-primary">
+                        <div class="panel-heading">
+                            <!--<h4 class="panel-title">-->
+                                <!--asd-->
+                            <!--</h4>-->
+
+                            <img class="img-responsive" src="img/featured/1-1.jpg" alt="">
+                            <img class="img-responsive img-alternative" src="img/featured/1-2.jpg" alt="">
+
+                            <div class="social-status">
+                                <a href="#" data-toggle="tooltip" title="asd">
+                                    <i class="fa fa-eye" aria-hidden="true"></i>
+                                    <span class="badge">42</span>
+                                </a>
+                                <a href="#">
+                                    <i class="fa fa-heart" aria-hidden="true"></i>
+                                    <span class="badge">42</span>
+                                </a>
+                                <a href="#">
+                                    <i class="fa fa-share-alt" aria-hidden="true"></i>
+                                    <span class="badge">42</span>
+                                </a>
+                            </div>
+
+                        </div>
+                        <div class="panel-body">
+                            <a href="#" class="btn-more-info" data-toggle="tooltip" title="Pogledaj oglas">
+                                <i class="fa fa-plus" aria-hidden="true"></i>
+                            </a>
+
+                            <p>asdasd</p>
+
                         </div>
                         <div class="panel-footer">
                             sd
