apeiron initial commit

--- a/app/fit.html
+++ b/app/fit.html
@@ -120,7 +120,7 @@
 <section class="container-fluid">
     <div class="row">
         <div class="jumbotron">
-            <h1>Kao neki moto</h1>
+            <h1>Fakultet Informacionih Tehnologija</h1>
             <p>prateci tekst</p>
         </div>
     </div>
@@ -133,71 +133,38 @@
 <section class="container">
     <div class="row">
         <section class="home-main col-xs-6">
-            sdasd
+            <h4 class="">Aktuelno</h4>
         </section>
         <section class="col-xs-3">
             <div class="panel panel-primary">
-                <div class="panel-heading">Upis</div>
-                <div class="panel-body">
-                    Panel content
-                </div>
-            </div>
-            <div class="panel panel-primary">
-                <div class="panel-heading">Dokumenti za preuzimanje</div>
-                <div class="panel-body">
-                    Panel content
-                </div>
-            </div>
-            <div class="panel panel-danger">
-                <div class="panel-heading">Odluke i obavjstenja</div>
-                <div class="panel-body">
-                    Panel content
-                </div>
-            </div>
-            <div class="panel panel-primary">
-                <div class="panel-heading">Nastavno osoblje</div>
-
-                <ul class="list-group">
-                    <li class="list-group-item">
-                        <a href="">Nastavnici u radnom odnosu</a>
-
-                    </li>
-                    <li class="list-group-item">
-                        <a href="">Saradnici u radnom odnosu</a>
-
-                    </li>
-                    <li class="list-group-item">
-
-                        <a href="">Angažovani stučni saradnici</a>
-                    </li>
-                    <li class="list-group-item">
-
-                        <a href="">Angažovani gostujući nastavnici</a>
-                    </li>
-                </ul>
-            </div>
-            <div class="panel panel-primary">
-                <div class="panel-heading">nastavni plan</div>
+                <div class="panel-heading"><h4>Rezultati ispita</h4></div>
                 <div class="panel-body">
                     Panel content
                 </div>
             </div>
         </section>
         <section class="col-xs-3">
+
             <div class="panel panel-primary">
-                <div class="panel-heading">Studentski servisi</div>
+                <div class="panel-heading">Ispitni rokovi</div>
                 <div class="panel-body">
                     Panel content
                 </div>
             </div>
             <div class="panel panel-primary">
-                <div class="panel-heading">Diplomski rad procedure</div>
+                <div class="panel-heading">Dokumenti</div>
                 <div class="panel-body">
                     Panel content
                 </div>
             </div>
-            <div class="panel panel-danger">
-                <div class="panel-heading">Zakoni uredbe procedure</div>
+            <div class="panel panel-primary">
+                <div class="panel-heading">Servisi</div>
+                <div class="panel-body">
+                    Panel content
+                </div>
+            </div>
+            <div class="panel panel-primary">
+                <div class="panel-heading">Priprema ispita</div>
                 <div class="panel-body">
                     Panel content
                 </div>
