--- a/app/index.html
+++ b/app/index.html
@@ -117,17 +117,31 @@
     </div>
 </nav>
 
-<section class="container-fluid">
-    <div class="row">
-        <div class="jumbotron">
-            <h1>Kao neki moto</h1>
-            <p>prateci tekst</p>
-        </div>
+
+
+
+<section id="slider">
+    <div>
+        <img class="img-responsive image-fullsize" src="img/slider1.jpg" alt="">
+    </div>
+    <div>
+        <img class="img-responsive image-fullsize" src="img/slider2.jpg" alt="">
     </div>
 
 
 </section>
 
+
+<section class="jumbotron-apeiron">
+    <div class="container">
+
+        <article class="jumbotron">
+            <h1>Kao neki moto</h1>
+            <p>proba</p>
+            <a class="btn btn-lg btn-danger btn-jumbotron" href="">Upiši se!</a>
+        </article>
+    </div>
+</section>
 
 
 <section class="container">
