--- a/app/index.html
+++ b/app/index.html
@@ -5,21 +5,16 @@
     <title>Apeiron - Web design i programiranje</title>
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
 
-    <meta name="description" content="Portal DOM.ba! Idealno mjesto za unos, pregled i prodaju vaših nekretnina.">
-    <meta name="keywords" content="dom.ba, nekretnine, prodaja, iznajmljivanje, , izdavanje, oglasi, stambeni objekti, stan, kuca, poslovni prostor, ugostiteljski objekat, garsonjera, garaza, plac, apartmani, kompanije, vikendice">
-    <meta name="language" content="Bosnian ">
-    <meta name="robots" content="index, follow">
-    <meta name="revisit-after" content="1 days">
-
     <!-- FAV icons -->
     <link rel="apple-touch-icon" sizes="180x180" href="/img/fav/apple-touch-icon.png">
-    <link rel="icon" type="image/png" href="/img/fav/favicon-32x32.png" sizes="32x32">
-    <link rel="icon" type="image/png" href="/img/fav/favicon-16x16.png" sizes="16x16">
-    <link rel="manifest" href="/img/fav/manifest.json">
-    <link rel="mask-icon" href="/img/fav/safari-pinned-tab.svg" color="#d40f0f">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/fav/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/fav/favicon-16x16.png">
+    <link rel="manifest" href="/img/fav/site.webmanifest">
+    <link rel="mask-icon" href="/img/fav/safari-pinned-tab.svg" color="#5bbad5">
     <link rel="shortcut icon" href="/img/fav/favicon.ico">
+    <meta name="msapplication-TileColor" content="#da532c">
     <meta name="msapplication-config" content="/img/fav/browserconfig.xml">
-    <meta name="theme-color" content="#d40f0f">
+    <meta name="theme-color" content="#247aa9">
 
     <!-- Open Graph data -->
     <meta property="fb:app_id" content="1505931683046243">
