--- a/app/index.html
+++ b/app/index.html
@@ -122,8 +122,6 @@
     <div>
         <img class="img-responsive image-fullsize" src="img/slider2.jpg" alt="">
     </div>
-
-
 </section>
 
 
@@ -141,10 +139,25 @@
 
 <section class="container">
     <div class="row">
-        <section class="home-main col-xs-6">
-            sdasd
+
+
+        <!-- main content -->
+        <section class="home-main col-xs-12 col-sm-6 col-md-6 col-lg-6">
+            <ul class="nav nav-tabs">
+                <li role="presentation" class="active"><a href="#">Aktuelno</a></li>
+                <li role="presentation"><a href="#">Upis</a></li>
+                <li role="presentation"><a href="#">Saradnja</a></li>
+                <li role="presentation"><a href="#">Riječ rektora</a></li>
+                <li role="presentation"><a href="#">Naši profesori</a></li>
+                <li role="presentation"><a href="#">Kvalitet</a></li>
+            </ul>
+
+
         </section>
-        <section class="col-xs-3">
+
+
+        <!-- sidebar -->
+        <section class="narrow-sidebar col-xs-12 col-sm-3 col-md-3 col-lg-3">
             <div class="panel panel-primary">
                 <div class="panel-heading">Upis</div>
                 <div class="panel-body">
@@ -192,7 +205,9 @@
                 </div>
             </div>
         </section>
-        <section class="col-xs-3">
+
+        <!-- sidebar -->
+        <section class="narrow-sidebar col-xs-12 col-sm-3 col-md-3 col-lg-3">
             <div class="panel panel-primary">
                 <div class="panel-heading">Studentski servisi</div>
                 <div class="panel-body">
